--- a/services/product/src/main/resources/application.properties
+++ b/services/product/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=product
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql= true
+
+spring.datasource.url=jdbc:mysql://product-db:3307/product
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.sql.init.platform=mysql
+
+spring.cloud.openfeign.client.config.categoriesClient.url=http://category:8080/api/v1/category
+
+server.port=8081
