--- a/services/category/docker/DockerfileCategoryMS
+++ b/services/category/docker/DockerfileCategoryMS
@@ -22,4 +22,4 @@ COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
 
 EXPOSE 8080
 
-ENTRYPOINT ["java","-cp","app:app/lib/*","de.shop.category.CategoryServiceApplication"]
+ENTRYPOINT ["java","-cp","app:app/lib/*","de.shop.category.CategoryApplication"]
