--- a/services/product/src/main/resources/application.properties
+++ b/services/product/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.sql.init.platform=mysql
 
-spring.cloud.openfeign.client.config.categoriesClient.url=http://category:8080/api/v1/category
+spring.cloud.openfeign.client.config.categoryClient.url=http://category:8080/api/v1/category
 
 server.port=8081
