--- a/services/category/src/main/resources/application.properties
+++ b/services/category/src/main/resources/application.properties
@@ -1,14 +1,15 @@
-spring.application.name=category
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql= true
+spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:mysql://category-db:3308/category
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
 spring.sql.init.platform=mysql
 
-spring.cloud.openfeign.client.config.productsClient.url=http://product-service:8081/api/v1/products
+spring.cloud.openfeign.client.config.productsClient.url=http://product:8081/api/v1/product
+
+server.port=8080
