--- a/services/product/docker/DockerfileProductMS
+++ b/services/product/docker/DockerfileProductMS
@@ -22,4 +22,4 @@ COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
 
 EXPOSE 8081
 
-ENTRYPOINT ["java","-cp","app:app/lib/*","de.shop.product.ProductServiceApplication"]
+ENTRYPOINT ["java","-cp","app:app/lib/*","de.shop.product.ProductApplication"]
