--- a/kubernetes/category-ms.yaml
+++ b/kubernetes/category-ms.yaml
@@ -24,7 +24,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: category-service
+  name: category-ms
   labels:
     app: category-ms
 spec:
